fix jump while expanding the nav

--- a/src/scss/sections/home/_landing.scss
+++ b/src/scss/sections/home/_landing.scss
@@ -100,7 +100,7 @@ body {
         }
 
         .opened.link--menu::before {
-            content: " ";
+            visibility: hidden;
         }
     }
 }
